# cloudexit

./: .gitignore  README.md  config.py  main.py  publiccode.yml  pyproject.toml  requirements.txt
.github/workflows/: pr-checks.yml
assets/css/: style.css
assets/template/: index.html
config/: aws_example.json  azure_example.json
core/: __init__.py  engine.py  utils.py  utils_aws.py  utils_azure.py  utils_db.py  utils_report.py  utils_report_common.py  utils_report_html.py  utils_report_json.py  utils_report_pdf.py  utils_sync.py
datasets/: alternative.json  alternativetechnology.json  data.db  resourcetype.json  risk.json
tests/: report_fixtures.py  test_engine.py  test_pdf_sections.py  test_report_pipeline.py  test_report_transforms.py  test_utils_and_main.py  test_utils_aws.py  test_utils_azure.py  test_utils_sync.py  test_validate.py
utils/: __init__.py  aws.py  azure.py  codes.py  connection.py  constants.py  data.py  sync.py  utils.py  validate.py
