[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cloudexit"
version = "1.0.0"
description = "Open-source cloud exit assessment CLI for evaluating cloud lock-in risk."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "azure-identity==1.25.3",
    "azure-mgmt-resource==24.0.0",
    "azure-mgmt-authorization==4.0.0",
    "azure-mgmt-costmanagement==4.0.1",
    "boto3==1.43.5",
    "botocore==1.43.5",
    "rich==15.0.0",
    "Jinja2==3.1.6",
    "reportlab==4.5.0",
    "pillow==12.2.0",
    "plotly==6.7.0",
    "kaleido==1.3.0",
    "requests==2.33.1",
]

[project.optional-dependencies]
dev = [
    "black",
    "ruff",
]

[project.scripts]
cloudexit = "main:main"

[tool.setuptools]
py-modules = ["main", "config"]

[tool.setuptools.packages.find]
where = ["."]
include = ["core", "core.*", "utils", "utils.*"]
